<resources>
    <string name="app_name">GrabDoll</string>

    <!-- icon start -->
    <string name="ic_bear">&#xe900;</string>
    <string name="ic_home">&#xf015;</string>
    <string name="ic_back">&#xf053;</string>
    <string name="ic_forward">&#xf054;</string>
    <string name="ic_plus">&#xf067;</string>
    <string name="ic_minus">&#xf068;</string>
    <string name="ic_search">&#xf002;</string>
    <string name="ic_user">&#xf007;</string>
    <string name="ic_setting">&#xf013;</string>
    <string name="ic_trash">&#xf014;</string>
    <string name="ic_edit">&#xf044;</string>
    <string name="ic_chart2">&#xf201;</string>
    <string name="ic_chart">&#xe901;</string>
    <string name="ic_comments">&#xf086;</string>
    <string name="ic_close">&#xf00d;</string>
    <string name="ic_check">&#xf00c;</string>
    <string name="ic_grab">&#xe903;</string>
    <string name="ic_toys">&#xe902;</string>
    <string name="ic_group">&#xf0c0;</string>
    <string name="ic_address_book">&#xf2b9;</string>
    <!-- icon end -->

    <string name="text_home">主页</string>
    <string name="text_message">消息</string>
    <string name="text_chart">统计</string>
    <string name="text_mine">我的</string>
    <string name="title_activity_login">Sign in</string>
    <string name="text_login">登录</string>
    <string name="text_job_number">员工工号</string>
    <string name="text_password">密码</string>
    <string name="text_confirm">重复密码</string>
    <string name="text_register">注册</string>
    <string name="text_create">创建店铺</string>
    <string name="text_intro">简介</string>
    <string name="text_address">地址</string>
    <string name="text_name">名称</string>
    <string name="text_name_full">姓名</string>
    <string name="text_next_step">下一步</string>
    <string name="text_complete">完成</string>
    <string name="text_store_number">店铺帐号</string>
    <string name="text_create_store">创建店铺</string>
    <string name="text_must_fill_in">必填</string>
    <string name="text_set_manager">设置管理员</string>
    <string name="text_mobile">手机号码</string>
    <string name="text_remember_password">记住密码</string>
    <string name="text_save">保存</string>
    <string name="text_home_address">住址</string>
    <string name="text_mobile_short">手机</string>
    <string name="text_birthday">生日</string>
    <string name="text_sex">姓别</string>
    <string name="text_man">男</string>
    <string name="text_woman">女</string>
    <string name="text_avatar">头像</string>
    <string name="text_from_mobile_import">从手机通讯录导入</string>
    <string name="text_number">编号</string>
    <string name="text_count">数量</string>
    <string name="text_remark">备注</string>
    <string name="text_address_book">通讯录</string>

</resources>
