<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.kivii.grabdoll.ui.LoginActivity.Presenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <com.kivii.grabdoll.ui.view.IconFontView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="5dp"
                android:text="@string/ic_setting"
                android:textColor="@color/text_darker"
                android:textSize="@dimen/ic_big"
                android:onClick="@{presenter.onClickSetting}"/>

            <com.kivii.grabdoll.ui.view.RoundImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_store_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_store_number"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_member_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_job_number"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cb_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:checked="true"
                android:text="@string/text_remember_password" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{presenter.onClickRegister}"
                android:paddingBottom="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="10dp"
                android:text="@string/text_register"
                android:textColor="@color/appTheme" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/sel_btn_main"
            android:onClick="@{presenter.onClickLogin}"
            android:text="@string/text_login"
            android:textColor="@android:color/white" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="4" />

    </LinearLayout>
</layout>