<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.kivii.grabdoll.ui.MainActivity.Presenter" />

        <variable
            name="position"
            type="int"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_height"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <com.kivii.grabdoll.ui.view.IconFontView
                        android:layout_width="@dimen/appbar_height"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:onClick="@{presenter.onClickAdd}"
                        android:text="@string/ic_plus"
                        android:textColor="@android:color/white"
                        android:textSize="20dp" />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/appbar_height"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_height"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{presenter.onClickHome}">

                    <com.kivii.grabdoll.ui.view.IconFontView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_bear"
                        android:textColor="@{position==0?@color/appTheme:@color/text_gray}"
                        android:textSize="@dimen/ic_big"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_home"
                        android:textColor="@{position==0?@color/appTheme:@color/text_gray}"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{presenter.onClickMessage}">

                    <com.kivii.grabdoll.ui.view.IconFontView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_comments"
                        android:textColor="@{position==1?@color/appTheme:@color/text_gray}"
                        android:textSize="@dimen/ic_big" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_message"
                        android:textColor="@{position==1?@color/appTheme:@color/text_gray}"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{presenter.onClickChart}">

                    <com.kivii.grabdoll.ui.view.IconFontView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_chart"
                        android:textColor="@{position==2?@color/appTheme:@color/text_gray}"
                        android:textSize="@dimen/ic_big"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_chart"
                        android:textColor="@{position==2?@color/appTheme:@color/text_gray}"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{presenter.onClickMine}">

                    <com.kivii.grabdoll.ui.view.IconFontView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_user"
                        android:textColor="@{position==3?@color/appTheme:@color/text_gray}"
                        android:textSize="@dimen/ic_big"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_mine"
                        android:textColor="@{position==3?@color/appTheme:@color/text_gray}"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>