<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.kivii.grabdoll.core.bean.User"/>

        <variable
            name="presenter"
            type="com.kivii.grabdoll.ui.MemberCreateActivity.Presenter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_gray">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@android:color/white"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:text="@string/text_avatar"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <com.kivii.grabdoll.ui.view.RoundImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="12dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ic_default_avatar"
                        android:scaleType="fitCenter"
                        android:onClick="@{presenter.onClickAvatar}"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:text="@string/text_name_full"/>

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:inputType="text"
                        android:maxLength="8"
                        android:textColor="@color/text_darker"
                        android:textSize="14sp"
                        android:text="@{user.name}"
                        tools:text="名这了"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:text="@string/text_sex"/>

                    <RadioGroup
                        android:id="@+id/rg_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="right">
                        <RadioButton
                            android:id="@+id/rb_man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="12dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/text_man"
                            android:checked="@{user.sex==1}"/>
                        <RadioButton
                            android:id="@+id/rb_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="12dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/text_woman"
                            android:checked="@{user.sex==0}"/>
                    </RadioGroup>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:text="@string/text_birthday"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:gravity="right"
                        android:textColor="@color/text_darker"
                        android:textSize="14sp"
                        android:text="@{presenter.getBirthday(user.birthday)}"
                        android:onClick="@{presenter.onClickBirthday}"
                        tools:text="保密"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:text="@string/text_mobile_short"/>

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:textColor="@color/text_darker"
                        android:textSize="14sp"
                        android:text="@{user.mobile}"
                        tools:text="13622458888"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:text="@string/text_home_address"/>

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textColor="@color/text_darker"
                        android:textSize="14sp"
                        android:text="@{user.address}"
                        tools:text="名这了"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_gray"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/sel_btn_main"
                    android:textColor="@android:color/white"
                    android:text="@string/text_save"
                    android:onClick="@{presenter.onClickSave}"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>
</layout>
